# django-postgres-hot-upgrade

./: LICENSE  MANIFEST.in  README.md  docker-compose.yml  runtests  setup.cfg  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/workflows/: main.yml  release-drafter.yml
demo/: django_app.py
django_postgres_hot_upgrade/: __init__.py  app.py
tests/: django_settings.py  test_integration.py  test_unit.py
tests/migrations/: 0001_initial.py
