[metadata]
name = django-postgres-hot-upgrade
description = Django app that resets django.contrib.postgres caches that store postgres extensions OIDs
# version placeholder
author = PeopleDoc
author_email = mickael.guerin@people-doc.com
url = https://github.com/peopledoc/django-postgres-hot-upgrade
long_description = file: README.md
long_description_content_type='text/markdown'
keywords = django migrations postgresql
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    Django >= 2.2.0

[options.packages.find]
include =
    django_postgres_hot_upgrade
    django_postgres_hot_upgrade.*

[options.extras_require]
dev =
    black
    check-manifest
    flake8
    isort>=5
    psycopg2-binary
    tox

test =
    pytest
    pytest-django
    pytest-mock

[flake8]
ignore = E501  # line too long, because black is in charge of that.

[isort]
profile = black
known_first_party = django_postgres_hot_upgrade

[tool:pytest]
addopts =
    -vv --strict-markers -rfE
testpaths =
    tests
DJANGO_SETTINGS_MODULE = tests.django_settings
